--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,14 +17,16 @@ import TwitterIcon from "../components/ui/icons/twitter.astro"
   <div class="social-handles">
     <a
       class="centered"
-      href="https://github.com/flexdinesh/blogster"
+      target="_blank"
+      href="https://github.com/atticus64"
       aria-label="Blogster on GitHub"
     >
       <GitHubIcon title="GitHub" />
     </a>
     <a
       class="centered"
-      href="https://twitter.com/flexdinesh"
+      target="_blank"
+      href="https://twitter.com/tylung_dev"
       aria-label="Dinesh on Twitter"
     >
       <TwitterIcon title="Twitter" />
