feat: change code and normal font

--- a/src/components/CodeBlock.astro
+++ b/src/components/CodeBlock.astro
@@ -20,7 +20,7 @@ const { language, content } = Astro.props;
   pre[class*="language-"] {
     color: #e3eaf2;
     background: none;
-    font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+		font-family: 'JetBrains Mono', monospace;
     text-align: left;
     white-space: pre;
     word-spacing: normal;
