--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -16,7 +16,8 @@ export interface Props {
   date: Date;
 }
 
-const { title, date } = Astro.props;
+const { title, date, description } = Astro.props;
+console.log(Astro.props);
 const formattedDate = new Date(date).toLocaleDateString("en-us", {
   year: "numeric",
   month: "short",
@@ -40,6 +41,7 @@ const formattedDate = new Date(date).toLocaleDateString("en-us", {
     <main id="main">
       <section class="blog-post">
         <h1 class="title">{title}</h1>
+        <h4 class="description">{description}</h1>
         <time class="publish-date">{formattedDate}</time>
         <slot name="content" />
       </section>
@@ -69,6 +71,12 @@ const formattedDate = new Date(date).toLocaleDateString("en-us", {
     font-size: 2.5em;
     line-height: 1.2 !important;
     margin: 0.25em 0 0;
+  }
+  .description {
+	font-size: 1.25em;
+	line-height: 1.5;
+	margin: 0.5em 0 0;
+	opacity: 0.8;
   }
   .publish-date {
     font-size: 0.875em;
