feat: add view transitions api and about me

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,6 +10,7 @@ import TwitterIcon from "../components/ui/icons/twitter.astro"
     <section>
       <ul>
         <li><HeaderLink href="/">Blog</HeaderLink></li>
+        <li><HeaderLink href="/about">About Me</HeaderLink></li>
       </ul>
     </section>
   </nav>
