--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -10,6 +10,7 @@ import "../styles/markdown.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Favicon from "./Favicon.astro";
+import { ViewTransitions, fade } from "astro:transitions";
 
 export interface Props {
   title: string;
@@ -17,7 +18,6 @@ export interface Props {
 }
 
 const { title, date, description } = Astro.props;
-console.log(Astro.props);
 const formattedDate = new Date(date).toLocaleDateString("en-us", {
   year: "numeric",
   month: "short",
@@ -34,12 +34,13 @@ const formattedDate = new Date(date).toLocaleDateString("en-us", {
     <meta name="generator" content="Blogster" />
     <Favicon />
     <slot name="meta" />
+	<ViewTransitions />
   </head>
 
   <body class="text-text-body bg-bg-body max-w-3xl mx-auto px-4 sm:px-8">
     <Header />
     <main id="main">
-      <section class="blog-post">
+      <section transition:animate={fade({ duration: "0.4s" })} class="blog-post">
         <h1 class="title">{title}</h1>
         <h4 class="description">{description}</h1>
         <time class="publish-date">{formattedDate}</time>
