--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import { blog } from "../lib/markdoc/frontmatter.schema"
 import PageLayout from "../layouts/PageLayout.astro"
 import PageMeta from "../components/PageMeta.astro"
 import ExternalLinkIcon from "../components/ui/icons/external-link.astro"
+import {ViewTransitions, fade} from 'astro:transitions';
+
 import { SITE_TITLE } from "../config"
 
 const posts = await readAll({
@@ -22,8 +24,9 @@ const sortedPosts = posts
 ---
 
 <PageLayout>
+
   <PageMeta title={`Blog | ${SITE_TITLE}`} slot="meta" />
-  <section slot="main">
+  <section  transition:animate={fade({ duration: '0.4s' })} slot="main">
 		<div class="layout-images">
 			<!--<img src="/images/everest.jpg" alt="train" width="300">-->
 			<img src="/images/city.png" alt="city" >
